--- a/portafolio.html
+++ b/portafolio.html
@@ -55,7 +55,34 @@
             <div class="col-3"></div>
             <div class="col-9         p-4  mx-auto  text-justify " style="background-color:rgb(229, 226, 226);">
             
-                <!-- Carta contenido 1-->
+                <div class="card-deck">
+                    <!-- Carta contenido 3-->
+                    <div class="card" style="width:18rem;">
+                        <img class="card-img-top" src="img/proyect1.png" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Interfaz moderna</h5>
+                            <p class="card-text">
+                                Inerfaz dinamica programada en java, pensada para una 
+                                aplicacion de escritorio o un sistema administrativo
+                            </p>
+                            <a href="" data-toggle="modal" data-target="#modalUno" class="btn btn-primary btn-block">Ver</a>
+                        </div>
+                    </div>
+                    <!-- Carta contenido 4-->
+                    <div class="card" style="width:18rem;">
+                        <img class="card-img-top" src="img/wppr6.jpg" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Interfaz moderna</h5>
+                            <p class="card-text">
+                                Inerfaz dinamica programada en java, pensada para una 
+                                aplicacion de escritorio o un sistema administrativo
+                            </p>
+                            <a href="" data-toggle="modal" data-target="#modalUno" class="btn btn-primary btn-block">Ver</a>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- Carta contenido 1-->
                 <div class="card        w-25 d-inline-block  m-4 " >
                     <div class="card-header">
                         <p>PROYECTO 1</p>
@@ -93,8 +120,7 @@
                     <div class="card-footer">
                         Desarrollado por Juan Cisneros
                     </div>
-                </div>        
-
+                </div>  
                 
 
             </div>
@@ -134,4 +160,5 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>  
 </body>
+</html>
 </html>
